[package]
name = "lapis"
version = "0.1.0"
edition = "2021"
authors = ["amy universe <414d59@gmail.com>"]
repository = "https://github.com/tomara-x/lapis"
license = "MIT OR Apache-2.0"

[dependencies]
fundsp = {git = "https://github.com/tomara-x/fundsp", branch = "crossbeam", features = ["crossbeam"]} # update the label in main.rs
syn = {version = "2.0.98", features = ["full", "extra-traits"]}
crossbeam-channel = "0.5.14"

# Optional dependencies for GUI/audio
cpal = {version = "0.15.3", features = ["jack", "wasm-bindgen"], optional = true}
eframe = {version = "0.31.0", optional = true}
egui_extras = { version = "0.31.0", default-features = false, features = ["syntect"], optional = true}
log = {version = "0.4.26", optional = true}

[features]
default = []
gui = ["cpal", "eframe", "egui_extras", "log"]

[dev-dependencies]
# Dependencies needed for examples
cpal = {version = "0.15.3", features = ["jack", "wasm-bindgen"]}
eframe = "0.31.0"
egui_extras = { version = "0.31.0", default-features = false, features = ["syntect"] }
log = "0.4.26"
hound = "3.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[[example]]
name = "egui"
path = "examples/egui.rs"

# smol amount of optimization for our stuff
[profile.dev]
opt-level = 1

# high optimizations and no debug symbols for deps
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
panic = 'abort'
strip = true
codegen-units = 1
lto = "fat"
