[package]
name = "lapis"
version = "0.1.0"
edition = "2024"
authors = ["amy universe <414d59@gmail.com>"]
repository = "https://codeberg.org/tomara-x/lapis"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
fundsp = {git = "https://github.com/tomara-x/fundsp", features = ["crossbeam"]} #update label in main.rs
cpal = {version = "0.16.0", features = ["jack", "wasm-bindgen"]}
eframe = "0.33.0"
egui_extras = {version = "0.33.0", default-features = false, features = ["syntect"]}
syn = {version = "2.0.107", features = ["full", "extra-traits"]}
crossbeam-channel = "0.5.15"
log = "0.4.28"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.54"
web-sys = "0.3.81"

# smol amount of optimization for our stuff
[profile.dev]
opt-level = 1

# high optimizations and no debug symbols for deps
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
panic = 'abort'
strip = true
codegen-units = 1
lto = "fat"
